--- a/spring-llm/Dockerfile
+++ b/spring-llm/Dockerfile
@@ -4,6 +4,6 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:21-jdk
-COPY --from=builder /app/target/*-jar-with-dependencies.jar /app/app.jar
+COPY --from=builder /app/target/demo-spring-llm-*.jar /app/app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
