--- a/spring-llm/Dockerfile
+++ b/spring-llm/Dockerfile
@@ -1,9 +1,13 @@
-FROM maven:latest AS builder
+# Build stage
+FROM --platform=linux/amd64 maven:latest AS builder
 WORKDIR /app
-COPY . .
+COPY pom.xml .
+RUN mvn dependency:go-offline
+COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM eclipse-temurin:21-jdk
+# Runtime stage
+FROM --platform=linux/amd64 public.ecr.aws/amazoncorretto/amazoncorretto:21
+WORKDIR /app
 COPY --from=builder /app/target/demo-spring-llm-*.jar /app/app.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java","-jar","/app/app.jar"]
